--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,4 +15,7 @@ steps:
 - script: |
     npm install
     npm run build
-  displayName: 'npm install and build'
+    npm test
+  displayName: 'npm install, build, and test'
+
+# Added npm test function under script
